# battleship

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: description  uml.dia
include/: AIPlayer.h  CLI.h  GameLogic.h  GreedyStrategy.h  Grid.h  HumanPlayer.h  Player.h  RandomStrategy.h  Ship.h  ShipsGrid.h  ShootStrategy.h  UI.h  exceptions.h
include/test/: Player_mock.h  ShootStrategy_mock.h  UI_mock.h
src/: AIPlayer.cpp  CLI.cpp  GameLogic.cpp  GreedyStrategy.cpp  Grid.cpp  HumanPlayer.cpp  Player.cpp  RandomStrategy.cpp  Ship.cpp  ShipsGrid.cpp  exceptions.cpp  main.cpp
src/test/: Player_mock.cpp  ShootStrategy_mock.cpp
test/: AIPlayer_test.cpp  CLI_test.cpp  GameLogic_test.cpp  GreedyStrategy_test.cpp  Grid_test.cpp  HumanPlayer_test.cpp  Player_test.cpp  RandomStrategy_test.cpp  Ship_test.cpp  ShipsGrid_test.cpp  ShootStrategy_test.cpp  UI_test.cpp  mocks_test.cpp
